Creacion de middleware, routes, emailServce

--- a/.env
+++ b/.env
@@ -2,13 +2,15 @@ SQL_SERVER=localhost\SQLEXPRESS
 SQL_DATABASE=SistemaTickets
 SQL_USER=n8n_user
 SQL_PASSWORD=N8nSegura123
+JWT_SECRET=SUPER-CONADEH-SECRETO-2026
+SOPORTE_CODE=IT_Cndh-2026
 
 # CONFIGURACIÓN DE CORREO (SMTP)
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=tu_correo@gmail.com
-SMTP_PASSWORD=tu_contraseña_app
-SMTP_FROM=tu_correo@gmail.com
+SMTP_USER=majo05828@gmail.com
+SMTP_PASSWORD=mvxtcahrkjggbjbp
+SMTP_FROM=majo05828@gmail.com
 
 # CORREO DE SOPORTE (donde se enviarán los tickets)
-SUPPORT_EMAIL=soporte@empresa.com
+SUPPORT_EMAIL=mariajopalada151@gmail.com
