modificacion de credenciales

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SQL_SERVER=localhost\SQLEXPRESS
+SQL_SERVER=localhost\\SQLEXPRESS
 SQL_DATABASE=SistemaTickets
 SQL_USER=n8n_user
 SQL_PASSWORD=N8nSegura123
