--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mssql": "^12.2.0",
-    "nodemailer": "^6.10.1"
+    "nodemailer": "^6.10.1",
+    "serve-favicon": "^2.5.1"
   }
 }
